force-app/main/default/objects/AI_Audit_Event__c/AI_Audit_Event__c.object-meta.xml
<CustomObject>
    <label>AI Audit Event</label>
    <pluralLabel>AI Audit Events</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>AI Audit Event</label>
        <displayFormat>AAE-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>