force-app/main/default/objects/AI_Audit_Event__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category_</label>
    <type>Text</type>
    <length>100</length>
</CustomField>