force-app/main/default/objects/AI_Audit_Event__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>