force-app/main/default/objects/AI_Audit_Event__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp_</label>
    <type>DateTime</type>

</CustomField>